--- a/assignment_6_KopetskyA.ipynb
+++ b/assignment_6_KopetskyA.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,21 +382,21 @@
     "    model, \n",
     "    optimizer,\n",
     "    train_iterator,\n",
-    "    test_iterator=None,\n",
+    "    val_iterator=None,\n",
     "    scheduler=None,\n",
     "    patience=5,\n",
     "    save_path='tt_model'\n",
     "):    \n",
     "    train_losses = []\n",
-    "    test_accs = []\n",
-    "    max_test_acc = 0\n",
+    "    val_accs = []\n",
+    "    max_val_acc = 0\n",
     "    n_no_improv_epochs = 0\n",
     "    \n",
     "    criterion = tt.nn.CrossEntropyLoss()\n",
     "    \n",
     "    for epoch in range(epochs):\n",
     "        c_train_losses = []\n",
-    "        c_test_losses = []\n",
+    "        c_val_losses = []\n",
     "        \n",
     "        st_time = time()\n",
     "        \n",
@@ -414,11 +414,11 @@
     "        c_train_loss = np.mean(c_train_losses)\n",
     "        train_losses.append(c_train_loss)\n",
     "        \n",
-    "        test_acc = eval_accuracy(model, test_iterator)\n",
-    "        test_accs.append(test_acc)\n",
+    "        val_acc = eval_accuracy(model, val_iterator)\n",
+    "        val_accs.append(val_acc)\n",
     "        \n",
-    "        if test_acc > max_test_acc:\n",
-    "            max_test_acc = test_acc\n",
+    "        if val_acc > max_val_acc:\n",
+    "            max_val_acc = val_acc\n",
     "            n_no_improv_epochs = 0\n",
     "            tt.save(model.state_dict(), save_path)\n",
     "            \n",
@@ -426,7 +426,7 @@
     "            n_no_improv_epochs += 1\n",
     "            \n",
     "        else:\n",
-    "            print(f'Early stopping at epoch {epoch+1}\\nBest test accuracy: {max_test_acc:.4f}')\n",
+    "            print(f'Early stopping at epoch {epoch+1}\\nBest val accuracy: {max_val_acc:.4f}')\n",
     "            break\n",
     "            \n",
     "        if scheduler is not None:\n",
@@ -434,9 +434,9 @@
     "        \n",
     "        c_time = time() - st_time\n",
     "        \n",
-    "        print(f'epoch: {epoch+1} \\t train_loss: {c_train_loss:.4f} \\t test_acc: {test_acc:.4f} \\t time: {c_time:.2f} s.')\n",
+    "        print(f'epoch: {epoch+1} \\t train_loss: {c_train_loss:.4f} \\t val_acc: {val_acc:.4f} \\t time: {c_time:.2f} s.')\n",
     "    \n",
-    "    return train_losses, test_accs"
+    "    return train_losses, val_accs"
    ]
   },
   {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,16 +474,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_iter = get_iterator(train_dataset, BATCH_SIZE)"
+    "train_split, val_split = train_dataset.split(split_ratio=0.9, stratified=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_iter = get_iterator(train_split, BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_iter = get_iterator(val_split, BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,18 +553,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7eaa3f0ce21347848607c345b6bac3e9",
+       "model_id": "e3472c4a907a423b96b4fb43d40472d5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=3159), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=2843), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -556,18 +574,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 1 \t train_loss: 0.5855 \t test_acc: 0.7047 \t time: 165.10 s.\n"
+      "epoch: 1 \t train_loss: 0.5871 \t val_acc: 0.7020 \t time: 149.45 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a8230c92f1a4caa824e936138032c54",
+       "model_id": "396a4e0eb0f8476492daede744909085",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=3159), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=2843), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -577,18 +595,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 2 \t train_loss: 0.5064 \t test_acc: 0.6945 \t time: 162.21 s.\n"
+      "epoch: 2 \t train_loss: 0.5077 \t val_acc: 0.6964 \t time: 145.77 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83bd554a7d314541b1d493bddf9c7778",
+       "model_id": "4ef596b49e0f414c9d9a14c903b8bf18",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=3159), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=2843), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -598,18 +616,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 3 \t train_loss: 0.4095 \t test_acc: 0.6872 \t time: 162.20 s.\n"
+      "epoch: 3 \t train_loss: 0.4085 \t val_acc: 0.6889 \t time: 143.68 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7b2616aa33f4d4bb61c9fcbd99b2fb9",
+       "model_id": "8cfdeb880fbf4eb7a1bb11c8092f3359",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=3159), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=2843), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -619,18 +637,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 4 \t train_loss: 0.3738 \t test_acc: 0.6827 \t time: 162.05 s.\n"
+      "epoch: 4 \t train_loss: 0.3731 \t val_acc: 0.6838 \t time: 143.80 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a9bd0dd5ae24bd886a7953fad0f683f",
+       "model_id": "b1b38708daac4a479d7ea16157c25625",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=3159), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=2843), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -641,61 +659,61 @@
      "output_type": "stream",
      "text": [
       "Early stopping at epoch 5\n",
-      "Best test accuracy: 0.7047\n"
+      "Best val accuracy: 0.7020\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "([0.5855079675898139,\n",
-       "  0.5064315397779411,\n",
-       "  0.40946778430520603,\n",
-       "  0.37377089785601225,\n",
-       "  0.36532113330580834],\n",
-       " [0.7046968909994806,\n",
-       "  0.6945462640053425,\n",
-       "  0.6872300957186317,\n",
-       "  0.6827434394400337,\n",
-       "  0.6821993025153966])"
+       "([0.5870653887240349,\n",
+       "  0.5076698471952231,\n",
+       "  0.4084505276427569,\n",
+       "  0.3730903426254043,\n",
+       "  0.3646685175710357],\n",
+       " [0.7019613662783508,\n",
+       "  0.6964334297939699,\n",
+       "  0.6889144468353491,\n",
+       "  0.6838317132893077,\n",
+       "  0.6830031411540649])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train(10, model, optimizer, train_iter, test_iterator=test_iter, scheduler=scheduler, patience=3)"
+    "train(10, model, optimizer, train_iter, val_iterator=val_iter, scheduler=scheduler, patience=3, save_path='tt_model2')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Загрузим лучшую модель"
+    "Загрузим лучшую модель и оценим качество на отложенной тестовой выборке"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(tt.load('tt_model'))"
+    "model.load_state_dict(tt.load('tt_model2'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7051371472385051"
+       "0.7025055032029878"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
