--- a/assignment_7_KopetskyA.ipynb
+++ b/assignment_7_KopetskyA.ipynb
@@ -85,10 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.seed(17)\n",
     "test_idxs = list(np.random.randint(0, df.shape[0], size=(int(df.shape[0]*0.1),)))\n",
     "train_idxs = list(set(range(df.shape[0])).difference(test_idxs))\n",
     "\n",
@@ -98,16 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((34149,), (3772,))"
+       "((34128,), (3772,))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,13 +391,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate(model, tokenizer, i2ch, hidden_size, maxlen=100):\n",
-    "    h0 = np.random.normal(size=(1, 1, hidden_size))\n",
-    "    c0 = np.random.normal(size=(1, 1, hidden_size))\n",
+    "def generate(model, tokenizer, i2ch, hidden_size, maxlen=100, scale=1.1):\n",
+    "    h0 = np.random.normal(scale=scale, size=(1, 1, hidden_size))\n",
+    "    c0 = np.random.normal(scale=scale, size=(1, 1, hidden_size))\n",
     "    states = (tt.tensor(h0, dtype=tt.float32).cuda(), tt.tensor(c0, dtype=tt.float32).cuda())\n",
     "    \n",
     "    generated = ''\n",
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,18 +458,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40b57dd3acc84be9808b3abc5045a40e",
+       "model_id": "fb2821ae65964fe69710c204dfa666f9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -479,18 +480,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 1 \t train_perplexity: 1.7876 \t val_perplexity: 1.4389 \t time: 10.25 s.\n"
+      "epoch: 1 \t train_perplexity: 1.7264 \t val_perplexity: 1.4179 \t time: 9.93 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f92fe473bd3244569d2cbb377de61eab",
+       "model_id": "4bdd95f207e641fe9a931836e47c3da7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -501,18 +502,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 2 \t train_perplexity: 1.4092 \t val_perplexity: 1.3901 \t time: 9.34 s.\n"
+      "epoch: 2 \t train_perplexity: 1.3868 \t val_perplexity: 1.3726 \t time: 9.82 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c977f23c0a6e414f96bd97a0245990ef",
+       "model_id": "c9743ae465ee4885b8661aa8aa7b7ae5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -523,18 +524,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 3 \t train_perplexity: 1.3713 \t val_perplexity: 1.3660 \t time: 9.28 s.\n"
+      "epoch: 3 \t train_perplexity: 1.3511 \t val_perplexity: 1.3506 \t time: 9.78 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4fd3f45e4f649ba8f4665b3773b4699",
+       "model_id": "c8cf8a400fee41378393bc43ebd33289",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -545,18 +546,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 4 \t train_perplexity: 1.3475 \t val_perplexity: 1.3528 \t time: 9.22 s.\n"
+      "epoch: 4 \t train_perplexity: 1.3287 \t val_perplexity: 1.3376 \t time: 9.69 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27ac735f567f4dec94963b60e294da10",
+       "model_id": "dd7125f71d444b6dadba4bebfed457df",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -567,18 +568,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 5 \t train_perplexity: 1.3304 \t val_perplexity: 1.3454 \t time: 9.35 s.\n"
+      "epoch: 5 \t train_perplexity: 1.3128 \t val_perplexity: 1.3297 \t time: 9.74 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c898f621964475f981fa288ab2af468",
+       "model_id": "f3787da76f544024940b22490f321b64",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -589,18 +590,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 6 \t train_perplexity: 1.3166 \t val_perplexity: 1.3413 \t time: 9.28 s.\n"
+      "epoch: 6 \t train_perplexity: 1.2999 \t val_perplexity: 1.3256 \t time: 9.73 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7883c0a69c84645bb93f25f1e46cd57",
+       "model_id": "98fe9496dc8c4196bbbad541adb0a485",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -611,18 +612,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 7 \t train_perplexity: 1.3044 \t val_perplexity: 1.3392 \t time: 9.29 s.\n"
+      "epoch: 7 \t train_perplexity: 1.2888 \t val_perplexity: 1.3240 \t time: 9.71 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8ce827ee2c54748a70bbe1fb958621b",
+       "model_id": "fd61e584400d4ba5aa3f9007c921ef54",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -633,18 +634,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 8 \t train_perplexity: 1.2932 \t val_perplexity: 1.3387 \t time: 9.32 s.\n"
+      "epoch: 8 \t train_perplexity: 1.2786 \t val_perplexity: 1.3237 \t time: 9.67 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0820697e8b844f89b662a7fbc9c34aa",
+       "model_id": "a0e2720758d24bb4a0f7698d6230e014",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -655,18 +656,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 9 \t train_perplexity: 1.2826 \t val_perplexity: 1.3404 \t time: 9.31 s.\n"
+      "epoch: 9 \t train_perplexity: 1.2690 \t val_perplexity: 1.3241 \t time: 9.77 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc25a9e8d5e548cc9babafbcbdd4fd5d",
+       "model_id": "e3daa37332234c21b921bbbcfc67d0dc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -677,18 +678,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 10 \t train_perplexity: 1.2727 \t val_perplexity: 1.3437 \t time: 9.33 s.\n"
+      "epoch: 10 \t train_perplexity: 1.2598 \t val_perplexity: 1.3260 \t time: 9.76 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37aa9ac2cec540d981b31ac83cfff5a6",
+       "model_id": "978ed16d234b4bfc89144f866f86c9ba",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -699,18 +700,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 11 \t train_perplexity: 1.2634 \t val_perplexity: 1.3482 \t time: 9.27 s.\n"
+      "epoch: 11 \t train_perplexity: 1.2512 \t val_perplexity: 1.3287 \t time: 9.69 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12efc411bba64d849b1a5c395a3d9724",
+       "model_id": "cc17ced7837843c19baf2cbef6f9c6e3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -721,18 +722,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 12 \t train_perplexity: 1.2549 \t val_perplexity: 1.3525 \t time: 9.28 s.\n"
+      "epoch: 12 \t train_perplexity: 1.2432 \t val_perplexity: 1.3326 \t time: 9.72 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "217aa726d71d4f67964b5352ee09fcdd",
+       "model_id": "463da04ace6c42308a0328e1a65ee6be",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -743,18 +744,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "epoch: 13 \t train_perplexity: 1.2474 \t val_perplexity: 1.3568 \t time: 9.29 s.\n"
+      "epoch: 13 \t train_perplexity: 1.2359 \t val_perplexity: 1.3372 \t time: 9.70 s.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14931b8ccd47472780195b579187a3a2",
+       "model_id": "29f68bc19bd74a599555d1772ff8a5dd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=481), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=480), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -766,43 +767,43 @@
      "text": [
       "\n",
       "Early stopping at epoch 14\n",
-      "Best val perplexity: 1.3387\n"
+      "Best val perplexity: 1.3237\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "([1.7875557368366617,\n",
-       "  1.4091979912016572,\n",
-       "  1.3712617188285987,\n",
-       "  1.347515466884073,\n",
-       "  1.3304075063463827,\n",
-       "  1.316550007488533,\n",
-       "  1.304403958319605,\n",
-       "  1.2932265074250997,\n",
-       "  1.2826481936655298,\n",
-       "  1.2727210440186347,\n",
-       "  1.2634054851692822,\n",
-       "  1.2549092918353109,\n",
-       "  1.2473507930526126,\n",
-       "  1.2407256850345452],\n",
-       " [1.4388914073374104,\n",
-       "  1.3901009498557328,\n",
-       "  1.365969756638375,\n",
-       "  1.3527651393518438,\n",
-       "  1.3453876385276755,\n",
-       "  1.3412559310576684,\n",
-       "  1.3391948517960206,\n",
-       "  1.3387152944274254,\n",
-       "  1.3403702692166226,\n",
-       "  1.343745649557645,\n",
-       "  1.3481585081925072,\n",
-       "  1.3525067602694798,\n",
-       "  1.3568156699901468,\n",
-       "  1.3615484357897278])"
+       "([1.726351124967248,\n",
+       "  1.386844742319806,\n",
+       "  1.3510639593092533,\n",
+       "  1.3287174641155706,\n",
+       "  1.312759997579192,\n",
+       "  1.2999277980695019,\n",
+       "  1.288788128810972,\n",
+       "  1.2785957557262544,\n",
+       "  1.268995919967657,\n",
+       "  1.2598158119693652,\n",
+       "  1.2511981098491465,\n",
+       "  1.243198183982238,\n",
+       "  1.2359365141795053,\n",
+       "  1.2294191864363604],\n",
+       " [1.4179230422986766,\n",
+       "  1.3725672852416055,\n",
+       "  1.3505512252429137,\n",
+       "  1.3375534303594592,\n",
+       "  1.3297183908013346,\n",
+       "  1.3256392948579927,\n",
+       "  1.3239752131569138,\n",
+       "  1.3236701330512786,\n",
+       "  1.3240619971700516,\n",
+       "  1.3259742740034761,\n",
+       "  1.3287117486492486,\n",
+       "  1.332590630159902,\n",
+       "  1.3372440888774833,\n",
+       "  1.3422826134006318])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,16 +830,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.3404006162209148"
+       "1.3214760454567611"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,12 +852,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Сгенерируеем 10 случайных названий, сэмплируя скрытые состояния из обыкновенного N(0, 1)"
+    "Сгенерируеем 10 случайных названий, сэмплируя скрытые состояния из обыкновенного нормального распределения"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,23 +869,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Demise\n",
-      "Sanguinary\n",
-      "Sere\n",
-      "In the Dead\n",
-      "Manda\n",
-      "In Death\n",
-      "Dead\n",
-      "As Thousand Bleeding\n",
-      "Con Death\n",
-      "Mangue\n"
+      "Creath\n",
+      "Infection\n",
+      "Sullen\n",
+      "Sected\n",
+      "Soul\n",
+      "Sedence\n",
+      "Necrosis\n",
+      "Blasphemerator\n",
+      "Pacanatis\n",
+      "Dead\n"
      ]
     }
    ],
@@ -902,12 +903,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found duplicate: Infection\n",
+      "Found duplicate: Sullen\n",
+      "Found duplicate: Necrosis\n",
+      "Found duplicate: Dead\n"
+     ]
+    }
+   ],
    "source": [
     "for x in samples:\n",
-    "    if f'<x>' in texts_train:\n",
+    "    if f'<{x}>' in texts_train:\n",
     "        print(f'Found duplicate: {x}')"
    ]
   },
@@ -915,7 +927,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Итого, все сэмплированные названия уникальны"
+    "За пару десятков экспериментов в среднем, половина названий - копии, но те, что не копии, выглядят довольно правдоподобно.  \n",
+    "Увеличение ско при сэмплировании скрытых состояний помогает разнообразить выдачу, но в то же время увеличивает вероятность генерации мало связной чуши. "
    ]
   }
  ],
